# gitlab-rag-mvp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CUsersYuchiPanAppDataLocalTemphermes-verify-rag.py  ISSUES_LOG.md  README.md  USAGE.md  app.py  ask.py  confidence_evaluator.py  cp10_vs_cp12.py  cp25_faithfulness_baseline_v2.json  embed_and_store.py  final_test.py  generate_coding_suggestion.py  hybrid_search.py  keyword_index.py  prompt_builder.py  pyproject.toml  rag_interface.py  rag_post.sh  requirements.txt  run_grid_search.py  start_rag.ps1  start_rag.sh  test_parse.py  threshold_calibration.py
BACKUP/gitlab-rag-mvp-hybrid-v1.0/: ISSUES_LOG.md  app.py  embed_and_store.py  keyword_index.py  requirements.txt
BACKUP/gitlab-rag-mvp-v3-cp33-20260721-1622/: AGENTS.md  CHANGELOG.md  ISSUES_LOG.md  MANUAL.md  QUICKSTART.md  README.md  rag_ui.html
BACKUP/v3-cp25-complete-20260717/: README.md
backup/: CHANGELOG.md
backup/v3-cp25-complete-20260717/: README.md
chroma_db.backup_build_pyd_20260717_154908/: chroma.sqlite3
data/: nim_calls.db  nim_calls.jsonl
data/cache/: bm25_index.pkl.backup_build_pyd_20260717_154908
data/processed/: bm25_index.pkl
scripts/cp30/: cp30_a_full_scan.py  cp30_c_eval_optimized.py  cp30_c_evaluate.py
src/data/: nim_calls.db
src/gitlab_rag/: chunking.py  confidence_evaluator.py  evaluate_faithfulness.py  generate_coding_suggestion.py  gitlab_client.py  hybrid_search.py  prompt_builder.py  query.py  rag_interface.py  reranker.py
src/gitlab_rag_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+29 files in other folders)
